--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,4 @@
 <<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
   <head>
     <meta charset="utf-8" />
@@ -12,18 +8,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://unpkg.com/mvp.css" />
   </head>
+  <style>
+    section {
+      display: flex;
+      flex-warp: warp;
+      gap: 15px
+    }
+  </style>
   <body>
-    <!--[if lt IE 7]>
-      <p class="browsehappy">
-        You are using an <strong>outdated</strong> browser. Please
-        <a href="#">upgrade your browser</a> to improve your experience.
-      </p>
-    <![endif]-->
     <header>
       <h1>{{ title }}</h1>
     </header>
     <center>
-      <form>
+      <form id="search_form" action="/search">
         <input
           type="search"
           placeholder="keyword"
@@ -33,7 +30,30 @@
       </form>
     </center>
     <main>
-      {{keyword}}
+      {% if books %}
+      <center>
+        <h3 style="color: gray">{{books|length}}개 데이터 수집..</h3>
+      </center>
+      <section>
+        {% for book in books %}
+        <div>
+          <img src="{{book.image}}" width="150px" height="200px"/>
+          <p>
+            {% if book.publisher|length > 10 %}
+
+            {{book.publisher[:10]}}...
+
+            {% else %} {{book.publisher}} {% endif %}
+          </p>
+          <p>
+            {{book.discount}} 원
+          </p>
+        </div>
+        {% endfor %}
+      </section>
+      {% else %}
+      <center><h3 style="color: gray">Please Input keyword...</h3></center>
+      {% endif %}
     </main>
     <script src="" async defer></script>
   </body>
